test/testdata/string/invalid_binary_op_error.lox
"a" - "b"; // error: '-' operator cannot be used with types 'string' and 'string'
